[package]
name = "lolcode"
description = "A simple Lolcode to C compiler."
version = "0.1.0"
edition = "2021"
authors = ["Joseph Hobbs"]
readme = "README.md"
repository = "https://github.com/hobbsbros/lolcode.git"
license = "MIT"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
chrono = "0.4.0"