[package]
name = "lolcode"
description = "A simple Lolcode to C compiler."
version = "0.3.1"
edition = "2021"
authors = ["Joseph Hobbs"]
readme = "README.md"
repository = "https://github.com/hobbsbros/lolcode.git"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "lolc"
path = "src/main.rs"

[dependencies]
colored = "2.0.0"
chrono = "0.4.0"